@@ -1,5 +1,7 @@
 from ucommon 4.0.5 to 4.0.6
 - security system logging.
+- cleanup of cmake.
+- clearer idea of what shell::errexit is.
 
 from ucommon 4.0.4 to 4.0.5
 - smarter openssl search.
